# CryoGrid-run-manager

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: create_new_spatial_run.ipynb  remote_sensing_exploration.ipynb  remote_sensing_retrieval.ipynb
src/matlab/archive/: OUT_regridded.m  OUT_regridded2.m  TILE_1D_standard.m
src/matlab/custom/: INIT_TTOP_from_out.m  K_MEANS_custom.m  MASK_stratigraphy.m  OUT_FDD_TDD.m  OUT_regridded.m  OUT_regridded_FCI2.m  README.md  RUN_ENSEMBLE2.m  disp.m  ensemble_injector.m  post_process_clusters.m  process_topoScale.m  save_run_info_spatial.m
src/matlab/custom/archive/: TILE_1D_ensemble2.m  disp.m
src/python/cryogrid_run_manager/: __init__.py  _templater.py  cli.py  interp_spatial.py  profile_analysis.py  spatial.py  stratigraphy.py  templater.py  utils.py
src/python/cryogrid_run_manager/data/: stratigraphy.py
src/python/cryogrid_run_manager/misc/: make_rock_glacier_maps.py
src/python/cryogrid_run_manager/report/: __init__.py  excel.py  main.py  profiles.py
src/python/cryogrid_run_manager/templater/: __init__.py  clustering.py  data.py  files_n_folders.py  googlesheets.py  plotting.py  surface_index.py
src/python/cryogrid_run_manager/viz/: __init__.py  folium_helpers.py  google_maps_getter.py  profiles.py
src/python/misc/: make_rock_glacier_maps.py
templates/: run_config-Cluster_KMeans.xlsx  run_config.xlsx  run_cryogrid.m  slurm_submit.sh  ~$run_config.xlsx
templates/cluster_spatial/: run_config.xlsx  run_cryogrid.m  slurm_submit.sh
templates/ensemble/: run_cryogrid.m
